--- a/wp-bib.bib
+++ b/wp-bib.bib
@@ -87,9 +87,6 @@
 author = {Benjamin Grant Purzycki and Theiss Bendixen and Aaron D. Lightner},
 title = {Coding, causality, and statistical craft: the emergence and evolutionary drivers of moralistic supernatural punishment remain unresolved},
 journal = {Religion, Brain \& Behavior},
-volume = {0},
-number = {0},
-pages = {1-8},
 year  = {2022},
 publisher = {Routledge},
 doi = {10.1080/2153599X.2022.2065349}
@@ -237,6 +234,69 @@ doi = {10.1080/2153599X.2022.2065349}
   publisher={Springer}
 }
 
+@article{austin2015moving,
+  title={Moving towards best practice when using inverse probability of treatment weighting (IPTW) using the propensity score to estimate causal treatment effects in observational studies},
+  author={Austin, Peter C and Stuart, Elizabeth A},
+  journal={Statistics in medicine},
+  volume={34},
+  number={28},
+  pages={3661--3679},
+  year={2015},
+  publisher={Wiley Online Library}
+}
 
+@article{bendixen2023letter,
+  title={100,000 regressions do not make for causal inference},
+  author={Bendixen, Theiss},
+  journal={Science Advances},
+  year={2023},
+url={https://www.science.org/doi/10.1126/sciadv.abn3517#elettersSection}
+}
+
+@article{lesko2017generalizing,
+  title={Generalizing study results: a potential outcomes perspective},
+  author={Lesko, Catherine R and Buchanan, Ashley L and Westreich, Daniel and Edwards, Jessie K and Hudgens, Michael G and Cole, Stephen R},
+  journal={Epidemiology (Cambridge, Mass.)},
+  volume={28},
+  number={4},
+  pages={553},
+  year={2017},
+  publisher={NIH Public Access}
+}
+
+@book{mauritsenbendixenspirituality,
+  title={Are spiritual needs ubiquitous? {C}onceptual, statistical, and sampling biases in a recent study on spirituality and health in Denmark},
+  author={Mauritsen, Anne L and Bendixen, Theiss},
+  year={2023},
+  publisher={PsyArXiv},
+}
+
+@article{stripp2023spiritual,
+  title={Spiritual needs in Denmark: a population-based cross-sectional survey linked to Danish national registers},
+  author={Stripp, Tobias Anker and Wehberg, Sonja and B{\"u}ssing, Arndt and Koenig, Harold G and Balboni, Tracy A and VanderWeele, Tyler J and S{\o}ndergaard, Jens and Hvidt, Niels Christian},
+  journal={The Lancet Regional Health--Europe},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@misc{mauritsen_bendixen_christensen_2022,
+ title={Does a Pandemic Increase Religiosity in a Secular Nation? A Longitudinal Examination},
+ url={psyarxiv.com/qsgej},
+ DOI={10.31234/osf.io/qsgej},
+ publisher={PsyArXiv},
+ author={Mauritsen, Anne L and Bendixen, Theiss and Christensen, Henrik R},
+ year={2022}
+}
+
+@misc{schuessler_selb_2019,
+ title={Graphical Causal Models for Survey Inference},
+ url={osf.io/preprints/socarxiv/hbg3m},
+ DOI={10.31235/osf.io/hbg3m},
+ publisher={SocArXiv},
+ author={Schuessler, Julian and Selb, Peter},
+ year={2019},
+ month={Nov},
+ note = {osf.io/preprints/socarxiv/hbg3m}
+}
 
 
